--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 title: Aguragorn.GitHub.io
+logo: https://media-exp3.licdn.com/dms/image/C5603AQECeoSjoLUX0w/profile-displayphoto-shrink_400_400/0/1623655775536?e=1629331200&v=beta&t=PApBrgJuKDpaMyr6--NzQPeSiFEbg8VJtiJ2XEaVBnc
 description: 
 google_analytics: 
 show_downloads: true
