--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,8 @@ description:
 google_analytics: 
 show_downloads: false
 theme: jekyll-theme-minimal
+email: edwardjames.remo@criptext.com
+mobile: +639054656650
 
 gems:
   - jekyll-mentions
