--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,71 @@
+# Site settings
 title: Edward James Remo
-logo: https://media-exp3.licdn.com/dms/image/C5603AQECeoSjoLUX0w/profile-displayphoto-shrink_400_400/0/1623655775536?e=1629331200&v=beta&t=PApBrgJuKDpaMyr6--NzQPeSiFEbg8VJtiJ2XEaVBnc
-description: 
-google_analytics: 
-show_downloads: false
-theme: jekyll-theme-minimal
 email: edwardjames.remo@criptext.com
-mobile: 639054656650
+url: https://aguragorn.github.io
+description: "Edward James Remo's professional website, CV and Resume. Get to know more about Edward James Remo, his carreer history and some personal background."
+keywords: "Edward James, Edward James Remo, Edward James Remo CV, Edward James Remo Resume, Aguragorn, Aguragorn CV, Aguragorn Resume, Resume, CV, Carrer, Edward James Remo Carrer, History, Edward James Remo Carrer History"
+skills: "Senior Software Design Engineer - Android - iOS"
+meta_author: Remo Edward
 
-gems:
-  - jekyll-mentions
+# Google webmaster tools
+google_verify:
+
+# https://ssl.bing.com/webmaster/configure/verify/ownership Option 2 content= goes here
+bing_verify:
+
+# Contact form:
+# - static : pass through formspree.io to validate email sending
+# - disqus : replace contact form by disqus thread
+# - comment the line below if you want to stick with the default PHP contact form
+contact: static
+
+# If you use disqus you need disqus shortname
+# https://help.disqus.com/customer/portal/articles/466208
+# disqus_shortname: myshortname
+
+# Color settings (hex-codes without the leading hash-tag)
+color:
+  primary: 18bc9c #80B3FF
+  primary-rgb: "24,288,156" #"128,179,255"
+  secondary: 2c3e50 #FD6E8A
+  secondary-dark: 233140 #A2122F
+
+# Footer settings
+footer:
+  copyright: Edward James Remo
+  location: Location
+  social: Around the Web
+  credits: Credits
+
+# Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
+social:
+  - title: stack-overflow
+    url: https://stackoverflow.com/users/story/2673831
+  - title: github
+    url: https://github.com/aguragorn
+  - title: github
+    url: https://github.com/er-cormant
+  - title: gitlab
+    url: https://gitlab.com/aguragorn
+  - title: gitlab
+    url: https://gitlab.com/edwardjames.remo
+
+# Postal address (add as many lines as necessary)
+address:
+  - line: Marikina City, Metro Manila
+  - line: Philippines, 1811
+
+# Credits content
+credits: 'This website uses Freelancer, an open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.'
+
+# Build settings
+markdown: kramdown
+permalink: pretty
+
+#for posts
+defaults:
+  - scope:
+      path: ""
+      type: "posts"
+    values:
+      permalink: ""
