--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Site settings
-title: Freelancer
-email: your-email@domain.com
-url: https://github.com/jeromelachaud/freelancer-theme
-description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
-keywords: "your keywords, separated by commas"
-skills: "Web Developer - Graphic Artist - User Experience Designer"
-meta_author: LastName FirstName
+title: Edward James Remo
+email: edwardjames.remo@criptext.com
+url: https://aguragorn.github.io
+description: "Edward James Remo's professional website, CV and Resume. Get to know more about Edward James Remo, his carreer history and some personal background."
+keywords: "Edward James, Edward James Remo, Edward James Remo CV, Edward James Remo Resume, Aguragorn, Aguragorn CV, Aguragorn Resume, Resume, CV, Carrer, Edward James Remo Carrer, History, Edward James Remo Carrer History"
+skills: "Senior Software Engineer - Backend - Android - iOS"
+meta_author: Remo Edward
 
 # Google webmaster tools
 google_verify:
@@ -21,7 +21,7 @@ contact: static
 
 # If you use disqus you need disqus shortname
 # https://help.disqus.com/customer/portal/articles/466208
-disqus_shortname: myshortname
+# disqus_shortname: myshortname
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
@@ -32,31 +32,31 @@ color:
 
 # Footer settings
 footer:
-  copyright: Dr. Henry Jekyll
+  copyright: Edward James Remo
   location: Location
   social: Around the Web
   credits: Credits
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
-  - title: twitter
-    url: http://twitter.com/jekyllrb
-  - title: facebook
-    url:
   - title: stack-overflow
-    url: http://stackoverflow.com/questions/tagged/jekyll
-  - title: bitbucket
-    url: http://bitbucket.org/jekyll
+    url: https://stackoverflow.com/users/story/2673831
   - title: github
-    url: http://github.com/jekyll
+    url: https://github.com/aguragorn
+  - title: github
+    url: https://github.com/er-cormant
+  - title: gitlab
+    url: https://gitlab.com/aguragorn
+  - title: gitlab
+    url: https://gitlab.com/edwardjames.remo
 
 # Postal address (add as many lines as necessary)
 address:
-  - line: 3481 Melrose Place
-  - line: Beverly Hills, CA 90210
+  - line: Melbourne, Victoria
+  - line: Australia, 3977
 
 # Credits content
-credits: 'Freelancer is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.'
+credits: 'Site template by <a href="https://github.com/StartBootstrap/freelancer-jekyll">Freelancer</a>, Icon fonts by <a href="https://github.com/ForkAwesome/Fork-Awesome">Fork-Awesome</a>'
 
 # Build settings
 markdown: kramdown
